minor style change for copyright logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="calculator.png" type="image/x-icon">
+    <link rel="shortcut icon" href="calculator.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -48,7 +48,10 @@
           <button class="right-button calc-button">=</button>
         </div>
       </div>
-      <a href=""> <img src="github-logo.png" alt="github-logo" class="github-logo"> Copyright (c) 2021 - Floki </a>
+      <div class="copyright-area">
+        <img src="github-logo.png" alt="github-logo" class="github-logo" />
+        <a href="https://github.com/1floki">Copyright (c) 2021 - Floki </a>
+      </div>
     </main>
   </body>
 </html>
