minnor css changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <main>
       <div class="container">
         <div class="brand"><span>F L O K I</span></div>
-        <div class="display-area"></div>
+        <div class="display-area">
+            <div id="digits"></div>
+            <div id="ans"></div>
+        </div>
         <div class="calc-keys">
           <button class="top-left-button calc-button">AC</button>
           <button class="top-left-button calc-button">CE</button>
