ran code prettier

--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
       <div class="container">
         <div class="brand"><span>F L O K I</span></div>
         <div class="display-area">
-            <div id="digits"></div>
+            <div id="digits">0</div>
             <div id="ans"></div>
         </div>
         <div class="calc-keys">
-          <button class="top-left-button calc-button">AC</button>
-          <button class="top-left-button calc-button">CE</button>
-          <button class="top-left-button calc-button">%</button>
-          <button class="right-button calc-button">/</button>
+          <button class="top-left-button calc-button" id="ac">AC</button>
+          <button class="top-left-button calc-button" id="ce">CE</button>
+          <button class="top-left-button calc-button" id="percent">%</button>
+          <button class="right-button calc-button" id="/">/</button>
 
-          <button class="number-button calc-button">7</button>
-          <button class="number-button calc-button">8</button>
-          <button class="number-button calc-button">9</button>
-          <button class="right-button calc-button">x</button>
+          <button class="number-button calc-button" id="7">7</button>
+          <button class="number-button calc-button" id="8">8</button>
+          <button class="number-button calc-button" id="9">9</button>
+          <button class="right-button calc-button" id="*">x</button>
 
-          <button class="number-button calc-button">4</button>
-          <button class="number-button calc-button">5</button>
-          <button class="number-button calc-button">6</button>
-          <button class="right-button calc-button">-</button>
+          <button class="number-button calc-button" id="4">4</button>
+          <button class="number-button calc-button" id="5">5</button>
+          <button class="number-button calc-button" id="6">6</button>
+          <button class="right-button calc-button" id="-">-</button>
 
-          <button class="number-button calc-button">1</button>
-          <button class="number-button calc-button">2</button>
-          <button class="number-button calc-button">3</button>
-          <button class="right-button calc-button">+</button>
+          <button class="number-button calc-button" id="1">1</button>
+          <button class="number-button calc-button" id="2">2</button>
+          <button class="number-button calc-button" id="3">3</button>
+          <button class="right-button calc-button" id="4">+</button>
 
-          <button class="number-button calc-button">0</button>
-          <button class="number-button calc-button">-/+</button>
-          <button class="number-button calc-button">.</button>
-          <button class="right-button calc-button">=</button>
+          <button class="number-button calc-button" id="0">0</button>
+          <button class="number-button calc-button" id="change-symbol">-/+</button>
+          <button class="number-button calc-button" id=".">.</button>
+          <button class="right-button calc-button" id="equals">=</button>
         </div>
       </div>
       <div class="copyright-area">
