buttons update display when pressed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <button class="number-button calc-button" id="1">1</button>
           <button class="number-button calc-button" id="2">2</button>
           <button class="number-button calc-button" id="3">3</button>
-          <button class="right-button calc-button" id="4">+</button>
+          <button class="right-button calc-button" id="+">+</button>
 
           <button class="number-button calc-button" id="0">0</button>
           <button class="number-button calc-button" id="change-symbol">-/+</button>
