completed js -- fully functioning calculator

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="calc-keys">
           <button class="top-left-button calc-button" id="ac">AC</button>
           <button class="top-left-button calc-button" id="ce">CE</button>
-          <button class="top-left-button calc-button" id="percent">%</button>
+          <button class="top-left-button calc-button" id="%">%</button>
           <button class="right-button calc-button" id="/">/</button>
 
           <button class="number-button calc-button" id="7">7</button>
